--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
+
+
+
 <hello name="{{ name }}"></hello>
-<h1> {{username}}</h1>
+<div >
+  <b>Username:</b> <input type="text" class="form-control"#uname><br>
+  <b>Password:</b> <input type="text" class="form-control"#uname><br>
+<input type="button" class="form-control" value="Click me">
+</div>
