--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
 <hello name="{{ name }}"></hello>
 <div >
   <b>Username:</b> <input type="text" class="form-control"#uname><br>
-  <b>Password:</b> <input type="text" class="form-control"#uname><br>
+  <b>Password:</b> <input type="text" class="form-control"#pass><br>
+  <input type="color" class="form-control" #color>
 <input type="button" class="form-control" value="Click me">
 </div>
